...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

...
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/thh_display"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/usc_list_cas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="70dp"
...
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/kap_display"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/usc_list_rri"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="70dp"
...
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:textSize="17sp"
                                android:fontFamily="@font/ibm_plex_serif_semibold"
                                android:text="@string/sal_display"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/usc_list_sel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="70dp"
...
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
            android:paddingEnd="20dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <Button
                    android:id="@+id/log_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cardinal"
                    android:drawableLeft="@drawable/ic_right_from_bracket_solid"
                    android:textColor="@color/gold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="20sp"
                    android:text="@string/log_out"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Hi!"
                    android:gravity="center"
                    android:theme="@style/TitleTheme"/>
                <TextView
                    android:id="@+id/course_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/courses"
                    android:gravity="start"
                    android:theme="@style/TitleTheme"/>
                <LinearLayout
                    android:id="@+id/courses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
                <TextView
                    android:id="@+id/test_records_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/test_records"
                    android:gravity="start"
                    android:layout_marginTop="10dp"
                    android:theme="@style/TitleTheme"/>
                <LinearLayout
                    android:id="@+id/test_records"
                    android:layout_width="match_parent"
...
                    android:orientation="vertical"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/notification_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/nav"
...
            android:backgroundTint="@color/cardinal"
            android:src="@drawable/ic_report_icon_fill"
            android:layout_weight="1"
            app:tint="@color/gold" />

        <ImageButton
            android:id="@+id/profile"
            android:contentDescription="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/cardinal"
            android:backgroundTint="@color/cardinal"
            android:src="@drawable/ic_person_fill"
...
            android:src="@android:drawable/stat_notify_chat"
            android:layout_weight="1"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/log_in_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
