...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginVertical="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/popup_course_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/black_light"
            android:textSize="15sp"
            android:textColor="@color/online_red"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/popup_course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibm_plex_serif_bold"
        android:textSize="29sp"/>
    <LinearLayout
        android:layout_width="match_parent"
...
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_bold"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:text="@string/course_risk_report"/>
        <TextView
            android:id="@+id/pop_up_positive_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_high_risk_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_low_risk_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_building_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_bold"
            android:textSize="22sp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:id="@+id/pop_up_total_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_low_risk_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_high_risk_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/pop_up_positive_visitors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_serif_medium"
            android:textSize="15sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
...
        android:background="@color/pop_up_bg"
        android:layout_weight="1"
        android:gravity="start"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/change_course_status_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:paddingVertical="10dp" />
        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/ic_reply_solid"
            android:textColor="@color/grey_light_text"
            android:paddingVertical="8dp"
...
