...
    <string name="mhc_full">The Kathleen L. McCarthy Honors Residential College</string>
    <string name="mhc_display">The Kathleen L. McCarthy Honors Residential College (MHC)</string>
    <!--    Profile Strings    -->
    <string name="courses">Courses</string>
    <string name="test_records">COVID Test Records</string>
    <string name="no_test_records"><i>No COVID test result reported.</i></string>
    <string name="online"><b>Online</b></string>
    <string name="hybrid"><b>Hybrid</b></string>
    <string name="in_person"><b>In Person</b></string>
    <string name="assess"><b>Assess</b></string>
    <string name="negative_result">Negative</string>
    <string name="positive_result">Positive</string>
    <string name="add_records">Add Test Result</string>
    <string name="course_risk_report">Course Risk Report</string>
    <string name="positive_students">Positive Students: %d</string>
    <string name="high_risk_students">High Risk Students: %d</string>
    <string name="low_risk_students">Low Risk Students: %d</string>
    <string name="change_online">Change to Online</string>
    <string name="change_offline">Change to In-Person</string>
    <!--    Health Form Strings    -->
    <string name="health_form_title">Wellness Assessment Tool</string>
    <string name="guiding_question1">Do any of these apply to you?</string>
    <string name="infection">Are you tested positive?</string>
    <string name="infection_date">When did you test positive?</string>
    <string name="guiding_question2">Do you currently have any of the following symptoms (please answer regardless of why you believe you have the symptoms):</string>
...
    <string name="taste_smell">Loss of <b>Taste</b> or <b>Smell</b></string>
    <string name="muscle"><b>Muscle Soreness</b> or <b>Headaches</b> or <b>Fatigue</b></string>
    <string name="cough"><b>Cough</b> or <b>Runny Nose</b> or <b>Sore Throat</b> or <b>Congestion</b></string>
    <string name="breathing"><b>Difficulty Breathing</b> or <b>Shortness of Breath</b> or <b>Fatigue</b></string>
    <string name="conjunctivitis"><b>Conjunctivitis</b> (inflammation of eye including redness, itching, and tearing) ALONG WITH feeling feverish</string>
    <string name="gi_symptoms">GI symptoms such as <b>Abdominal Pain</b> or <b>Diarrhea</b> or <b>Nausea</b> or <b>Vomiting</b></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
</resources>
